building session storage

--- a/server/nodeServer/EmailTamp/notification.html
+++ b/server/nodeServer/EmailTamp/notification.html
@@ -84,11 +84,11 @@
     </div>
     <div class="content">
       <p>Use the OTP below to continue:</p>
-      <div class="otp-box">{{otp}}</div>
+      <div class="otp-box">Near, {{Location}}</div>
       <p>if that not you please change your password now ⌛</p>
     </div>
     <div class="footer">
-      © 2025 {{name}}. All rights reserved.
+      © 2025 CodeCove. All rights reserved.
     </div>
   </div>
 </body>
