--- a/server/nodeServer/EmailTamp/Login.html
+++ b/server/nodeServer/EmailTamp/Login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OTP Verification</title>
+<title>Login Notification</title>
 <style>
   body {
     margin: 0;
@@ -22,11 +22,10 @@
   }
 
   .header {
-    background: linear-gradient(135deg, #198549, #464ed8);
+    background: linear-gradient(135deg, #ff7e5f, #feb47b);
     padding: 25px 20px;
     text-align: center;
     color: white;
-    position: relative;
   }
 
   .header h3 {
@@ -40,23 +39,30 @@
     text-align: center;
   }
 
-  .otp-box {
-    display: inline-block;
-    margin: 25px 0;
-    padding: 14px 28px;
-    font-size: 26px;
-    font-weight: bold;
-    letter-spacing: 3px;
-    color: #ffffff;
-    background: linear-gradient(135deg, #198549, #464ed8);
-    border-radius: 10px;
-    border: 1px solid #555;
+  .info-box {
+    background: #333;
+    padding: 15px 20px;
+    border-radius: 8px;
+    margin: 20px 0;
+    text-align: left;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #b0b0b0;
   }
 
-  p {
-    font-size: 14px;
-    line-height: 1.6;
-    color: #b0b0b0;
+  .btn {
+    display: inline-block;
+    padding: 12px 25px;
+    background: #198549;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 8px;
+    text-decoration: none;
+    margin-top: 20px;
+  }
+
+  .btn:hover {
+    background: #14532d;
   }
 
   .footer {
@@ -71,13 +77,18 @@
 <body>
   <div class="container">
     <div class="header">
-      <h3>Welcome {{username}} 🎉</h3>
+      <h3>New Login Detected</h3>
     </div>
     <div class="content">
-      <p>Use the OTP below to verify your Email:</p>
-      <p>⚠️ This OTP is valid for 5 minutes only</p>
-      <div class="otp-box">{{otp}}</div>
-      <p>Thank you for joining us! We’re excited to have you onboard 🎉</p>
+      <p>Hello {{username}}, we noticed a login to your account:</p>
+      <div class="info-box">
+        <p><strong>Device:</strong> {{device_type}} - {{platform}}</p>
+        <p><strong>IP:</strong> {{ip}}</p>
+        <p><strong>Location:</strong> {{city}}, {{region}}, {{country}}</p>
+        <p><strong>Time:</strong> {{login_time}}</p>
+      </div>
+      <a href="{{check_activity_url}}" class="btn">Check Activity</a>
+      <p>If this wasn’t you, click the button above to secure your account immediately.</p>
     </div>
     <div class="footer">
       © 2025 CodeCove. All rights reserved.
