--- a/server/nodeServer/EmailTamp/Login.html
+++ b/server/nodeServer/EmailTamp/Login.html
@@ -7,91 +7,148 @@
 <style>
   body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #121212;
+    font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background-color: #0d0d0f;
     color: #e0e0e0;
+    -webkit-font-smoothing: antialiased;
+    padding: 30px 10px;
   }
 
-  .container {
+  .wrapper {
     max-width: 600px;
-    margin: 30px auto;
-    background: #1e1e1e;
-    border-radius: 12px;
+    margin: 0 auto;
+    background: linear-gradient(160deg, #18181b, #121213);
+    border-radius: 16px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
     overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
   }
 
   .header {
-    background: linear-gradient(135deg, #ff7e5f, #feb47b);
-    padding: 25px 20px;
+    background: linear-gradient(135deg, #2563eb, #16a34a);
+    padding: 40px 20px 35px;
     text-align: center;
     color: white;
+    position: relative;
   }
 
-  .header h3 {
+  .header::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 3px;
+    width: 80px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+  }
+
+  .header h1 {
     margin: 0;
-    font-size: 22px;
+    font-size: 24px;
     font-weight: 600;
+    letter-spacing: 0.5px;
   }
 
   .content {
-    padding: 35px 25px;
+    padding: 40px 30px;
     text-align: center;
   }
 
+  .content p {
+    color: #cccccc;
+    font-size: 15px;
+    line-height: 1.6;
+    margin: 10px 0;
+  }
+
   .info-box {
-    background: #333;
-    padding: 15px 20px;
-    border-radius: 8px;
-    margin: 20px 0;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(4px);
+    border: 1px solid rgba(255, 255, 255, 0.08);
+    border-radius: 10px;
+    padding: 20px 25px;
+    margin: 25px 0;
     text-align: left;
     font-size: 14px;
-    line-height: 1.5;
-    color: #b0b0b0;
+    line-height: 1.6;
+    color: #bcbcbc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .info-box strong {
+    color: #ffffff;
   }
 
   .btn {
     display: inline-block;
-    padding: 12px 25px;
-    background: #198549;
-    color: #fff;
-    font-weight: bold;
-    border-radius: 8px;
+    padding: 14px 32px;
+    margin: 20px 0;
+    background: linear-gradient(135deg, #16a34a, #2563eb);
+    color: #ffffff !important;
     text-decoration: none;
-    margin-top: 20px;
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 15px;
+    letter-spacing: 0.3px;
+    box-shadow: 0 4px 12px rgba(22, 163, 74, 0.3);
+    transition: all 0.3s ease;
   }
 
   .btn:hover {
-    background: #14532d;
+    background: linear-gradient(135deg, #15803d, #1e40af);
+    box-shadow: 0 0 16px rgba(22, 163, 74, 0.5);
   }
-  p{
-    color: white;
+
+  .divider {
+    height: 1px;
+    background: linear-gradient(to right, transparent, #333, transparent);
+    margin: 30px 0;
   }
+
   .footer {
     text-align: center;
     padding: 18px;
     font-size: 12px;
-    color: #ffffff;
-    background: #181818;
+    color: #888;
+    background: #101010;
+  }
+
+  @media (max-width: 480px) {
+    .content {
+      padding: 30px 20px;
+    }
+
+    .btn {
+      width: 100%;
+      padding: 12px 0;
+    }
   }
 </style>
 </head>
 <body>
-  <div class="container">
+  <div class="wrapper">
     <div class="header">
-      <h3>New Login Detected</h3>
+      <h1>🔐 New Login Detected</h1>
     </div>
+
     <div class="content">
-      <p>Hello {{username}}, we noticed a login to your account:</p>
+      <p>Hello 👋<strong>{{username}}</strong>,</p>
+      <p>We noticed a login to your account from a new device or location:</p>
+
       <div class="info-box">
-        <p><strong>Device:</strong> {{device_type}} - {{platform}}</p>
-        <p><strong>IP:</strong> {{ip}}</p>
+        <p><strong>Device:</strong> {{device_type}} — {{platform}}</p>
+        <p><strong>IP Address:</strong> {{ip}}</p>
         <p><strong>Location:</strong> {{city}}, {{region}}, {{country}}</p>
-        <p><strong>Time:</strong> {{login_time}}</p>
+        <p><strong>Login Time:</strong> {{login_time}}</p>
       </div>
-      <a href="{{activity_url}}" class="btn">Check Activity</a>
-      <p>If this wasn’t you, click the button above to secure your account immediately.</p>
+
+      <a href="{{activity_url}}" class="btn">Review Login Activity</a>
+
+      <div class="divider"></div>
+      <p>If this wasn’t you, please review your account immediately to secure it.</p>
     </div>
+
     <div class="footer">
       © 2025 CodeCove. All rights reserved.
     </div>
