--- a/server/nodeServer/EmailTamp/forgot.html
+++ b/server/nodeServer/EmailTamp/forgot.html
@@ -1,95 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome Email</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Password Reset Verification</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #121212;
-      color: #e0e0e0;
+      padding: 0;
+      background-color: #0f0f11;
+      color: #e8e8e8;
+      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
     }
 
-    .container {
+    .wrapper {
       max-width: 600px;
-      margin: 20px auto;
-      background: #1e1e1e;
-      border-radius: 12px;
+      margin: 25px auto;
+      background: linear-gradient(160deg, #1a1a1c, #171719);
+      border-radius: 14px;
       overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.8), 0 0 10px rgba(255, 0, 0, 0.15);
     }
 
     .header {
-      background: linear-gradient(135deg, #198549, #464ed8);
-      padding: 20px;
-      text-align: center;
+      background: linear-gradient(120deg, #b91c1c, #e11d48, #7f1d1d);
       color: white;
+      text-align: center;
+      padding: 40px 20px 30px;
+      position: relative;
     }
 
-    .header img {
-      max-height: 70px;
-      position: absolute;
-      left: 7cqh;
-      top: 20px;
-      margin-bottom: 10px;
-    }
-
-    .header h3 {
+    .header h1 {
       margin: 0;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: 600;
+      letter-spacing: 0.5px;
+    }
+
+    .alert-icon {
+      width: 50px;
+      height: 50px;
+      margin: 10px auto 0;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 26px;
+      color: white;
+      box-shadow: 0 0 15px rgba(255, 50, 50, 0.3);
     }
 
     .content {
-      padding: 30px 20px;
+      padding: 35px 25px 40px;
       text-align: center;
+    }
+
+    .content p {
+      font-size: 15px;
+      color: #c2c2c2;
+      margin: 10px 0;
+      line-height: 1.6;
     }
 
     .otp-box {
       display: inline-block;
-      margin: 20px 0;
-      padding: 12px 24px;
-      font-size: 24px;
-      font-weight: bold;
-      letter-spacing: 2px;
-      color: #ffffff;
-      background: #333;
-      border-radius: 8px;
-      border: 1px solid #555;
+      background: linear-gradient(135deg, #e11d48, #b91c1c);
+      color: white;
+      font-size: 28px;
+      font-weight: 700;
+      letter-spacing: 4px;
+      padding: 16px 36px;
+      margin: 25px 0;
+      border-radius: 10px;
+      box-shadow: 0 0 18px rgba(225, 29, 72, 0.4);
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
     }
 
-    p {
-      font-size: 14px;
-      line-height: 1.6;
-      color: #b0b0b0;
+    .note {
+      font-size: 13px;
+      color: #999;
+      margin-top: 10px;
+      font-style: italic;
+    }
+
+    .divider {
+      height: 1px;
+      background: linear-gradient(to right, transparent, #333, transparent);
+      margin: 35px 0;
+    }
+
+    .from {
+      font-size: 13px;
+      color: #9e9e9e;
+      margin-top: 5px;
+      text-align: center;
     }
 
     .footer {
-      text-align: center;
-      padding: 15px;
-      font-size: 12px;
+      background: #141414;
       color: #777;
-      background: #181818;
+      font-size: 12px;
+      text-align: center;
+      padding: 18px;
+    }
+
+    @media (max-width: 480px) {
+      .otp-box {
+        font-size: 22px;
+        padding: 12px 28px;
+      }
+      .content {
+        padding: 25px 15px 30px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="wrapper">
     <div class="header">
-      <img src="https://i.postimg.cc/VkfYCkgy/Code-Cove-Logo.png" alt="Logo">
-      <h3>Is you trying to reset your password</h3>
+      <div class="alert-icon">⚠️</div>
+      <h1>Password Reset Attempt</h1>
     </div>
+
     <div class="content">
-        <p>If that not you please don't share the otp:</p>
-      <p>Use the OTP below to continue:</p>
+      <p>If you requested to reset your password, use the OTP below to continue.</p>
+      <p>If this wasn’t you, please <strong>do not share this OTP</strong> and secure your account immediately.</p>
       <div class="otp-box">{{otp}}</div>
-      <p>{{from}}</p>
+      <p class="note">This OTP will expire in 5 minutes.</p>
+
+      <div class="divider"></div>
+      <p class="from">Team CodeCove</p>
     </div>
+
     <div class="footer">
-      © 2025 {{name}}. All rights reserved.
+      © 2025 CodeCove. All rights reserved.
     </div>
   </div>
 </body>
