--- a/server/nodeServer/EmailTamp/wellcome.html
+++ b/server/nodeServer/EmailTamp/wellcome.html
@@ -1,86 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OTP Verification</title>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #121212;
-    color: #e0e0e0;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OTP Verification</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #0c0c0d;
+      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      color: #eaeaea;
+      -webkit-font-smoothing: antialiased;
+      padding: 30px 10px;
+    }
 
-  .container {
-    max-width: 600px;
-    margin: 30px auto;
-    background: #1e1e1e;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
-  }
+    .wrapper {
+      max-width: 580px;
+      margin: 0 auto;
+      background: linear-gradient(145deg, #111113, #18191d);
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6), 0 0 40px rgba(24, 119, 242, 0.2);
+      overflow: hidden;
+    }
 
-  .header {
-    background: linear-gradient(135deg, #198549, #464ed8);
-    padding: 25px 20px;
-    text-align: center;
-    color: white;
-    position: relative;
-  }
+    .header {
+      background: radial-gradient(circle at top left, #1a73e8, #16a34a);
+      padding: 35px 20px;
+      text-align: center;
+      color: white;
+      position: relative;
+    }
 
-  .header h3 {
-    margin: 0;
-    font-size: 22px;
-    font-weight: 600;
-  }
+    .header h1 {
+      margin: 0;
+      font-size: 26px;
+      letter-spacing: 0.5px;
+      text-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+    }
 
-  .content {
-    padding: 35px 25px;
-    text-align: center;
-  }
+    .content {
+      padding: 40px 25px 30px;
+      text-align: center;
+    }
 
-  .otp-box {
-    display: inline-block;
-    margin: 25px 0;
-    padding: 14px 28px;
-    font-size: 26px;
-    font-weight: bold;
-    letter-spacing: 3px;
-    color: #ffffff;
-    background: linear-gradient(135deg, #198549, #464ed8);
-    border-radius: 10px;
-    border: 1px solid #555;
-  }
+    .content p {
+      margin: 10px 0;
+      color: #bcbcbc;
+      font-size: 15px;
+      line-height: 1.6;
+    }
 
-  p {
-    font-size: 14px;
-    line-height: 1.6;
-    color: #b0b0b0;
-  }
+    .otp-box {
+      margin: 28px auto;
+      display: inline-block;
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: 5px;
+      background: linear-gradient(135deg, #1a73e8, #16a34a);
+      color: white;
+      padding: 18px 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(26, 115, 232, 0.4);
+      text-shadow: 0 0 6px rgba(255, 255, 255, 0.4);
+    }
 
-  .footer {
-    text-align: center;
-    padding: 18px;
-    font-size: 12px;
-    color: #777;
-    background: #181818;
-  }
-</style>
+    .note {
+      font-size: 13px;
+      color: #9e9e9e;
+      margin-top: 20px;
+      font-style: italic;
+    }
+
+    .divider {
+      height: 1px;
+      background: linear-gradient(to right, transparent, #333, transparent);
+      margin: 30px 0;
+    }
+
+    .footer {
+      background: #111113;
+      text-align: center;
+      padding: 18px;
+      font-size: 12px;
+      color: #666;
+    }
+
+    .footer span {
+      color: #888;
+    }
+
+    @media (max-width: 480px) {
+      .otp-box {
+        font-size: 26px;
+        padding: 14px 25px;
+      }
+      .content {
+        padding: 30px 18px 25px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
+  <div class="wrapper">
     <div class="header">
-      <h3>Welcome {{username}} 🎉</h3>
+      <h1>Hey {{username}}, Welcome to CodeCove 🚀</h1>
     </div>
+
     <div class="content">
-      <p>Use the OTP below to verify your Email:</p>
-      <p>⚠️ This OTP is valid for 5 minutes only</p>
+      <p>To complete your sign-up, please verify your email address using the OTP below.</p>
       <div class="otp-box">{{otp}}</div>
-      <p>Thank you for joining us! We’re excited to have you onboard 🎉</p>
+      <p class="note">⚠️ This OTP will expire in <strong>5 minutes</strong>.</p>
+
+      <div class="divider"></div>
+      <p>Thanks for joining <strong>CodeCove</strong>! We’re thrilled to have you on board.  
+      Expect great things ahead 👾</p>
     </div>
+
     <div class="footer">
-      © 2025 CodeCove. All rights reserved.
+      © 2025 <span>CodeCove</span>. All rights reserved.
     </div>
   </div>
 </body>
