--- a/server/nodeServer/EmailTamp/Login.html
+++ b/server/nodeServer/EmailTamp/Login.html
@@ -24,7 +24,7 @@
   }
 
   .header {
-    background: linear-gradient(135deg, #2563eb, #16a34a);
+    background: linear-gradient(135deg, #eb2525, #2d4fd9, #8401dc);
     padding: 40px 20px 35px;
     text-align: center;
     color: white;
@@ -84,7 +84,7 @@
     display: inline-block;
     padding: 14px 32px;
     margin: 20px 0;
-    background: linear-gradient(135deg, #16a34a, #2563eb);
+    background: linear-gradient(135deg, #eb2525, #2d4fd9, #8401dc);;
     color: #ffffff !important;
     text-decoration: none;
     border-radius: 10px;
@@ -96,8 +96,8 @@
   }
 
   .btn:hover {
-    background: linear-gradient(135deg, #15803d, #1e40af);
-    box-shadow: 0 0 16px rgba(22, 163, 74, 0.5);
+    background: linear-gradient(135deg, #2d4fd9, #eb2525, #8401dc);;
+    box-shadow: 0 0 16px 5px rgba(22, 163, 74, 0.5);
   }
 
   .divider {
