--- a/server/nodeServer/EmailTamp/Login.html
+++ b/server/nodeServer/EmailTamp/Login.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login Notification</title>
+
 <style>
   body {
     margin: 0;
@@ -17,17 +18,18 @@
   .wrapper {
     max-width: 600px;
     margin: 0 auto;
-    background: linear-gradient(160deg, #18181b, #121213);
-    border-radius: 16px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
+    background: #151516; /* CLEAN DARK – no gradient */
+    border-radius: 14px;
+    box-shadow: 0 0 28px rgba(0, 0, 0, 0.65);
+    border: 1px solid rgba(255, 255, 255, 0.06);
     overflow: hidden;
   }
 
   .header {
-    background: linear-gradient(135deg, #eb2525, #2d4fd9, #8401dc);
-    padding: 40px 20px 35px;
+    background: #1f1f21; /* subtle gray-blue */
+    padding: 32px 20px;
     text-align: center;
-    color: white;
+    color: #ffffff;
     position: relative;
   }
 
@@ -38,42 +40,41 @@
     left: 50%;
     transform: translateX(-50%);
     height: 3px;
-    width: 80px;
-    background: rgba(255, 255, 255, 0.3);
+    width: 70px;
+    background: rgba(255, 255, 255, 0.18);
     border-radius: 10px;
   }
 
   .header h1 {
     margin: 0;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.4px;
   }
 
   .content {
-    padding: 40px 30px;
+    padding: 34px 30px;
     text-align: center;
   }
 
   .content p {
-    color: #cccccc;
+    color: #cfcfcf;
     font-size: 15px;
     line-height: 1.6;
     margin: 10px 0;
   }
 
   .info-box {
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(4px);
+    background: #1b1b1d;
     border: 1px solid rgba(255, 255, 255, 0.08);
     border-radius: 10px;
-    padding: 20px 25px;
-    margin: 25px 0;
+    padding: 18px 22px;
+    margin: 24px 0;
     text-align: left;
     font-size: 14px;
     line-height: 1.6;
-    color: #bcbcbc;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    color: #bdbdbd;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.35);
   }
 
   .info-box strong {
@@ -82,59 +83,66 @@
 
   .btn {
     display: inline-block;
-    padding: 14px 32px;
+    padding: 12px 30px;
     margin: 20px 0;
-    background: linear-gradient(135deg, #eb2525, #2d4fd9, #8401dc);;
+    background: #2d5cff; /* cool blue button */
     color: #ffffff !important;
     text-decoration: none;
-    border-radius: 10px;
+    border-radius: 8px;
     font-weight: 600;
     font-size: 15px;
     letter-spacing: 0.3px;
-    box-shadow: 0 4px 12px rgba(22, 163, 74, 0.3);
-    transition: all 0.3s ease;
+    box-shadow: 0 4px 12px rgba(45, 92, 255, 0.4);
+    transition: 0.25s;
   }
 
   .btn:hover {
-    background: linear-gradient(135deg, #2d4fd9, #eb2525, #8401dc);;
-    box-shadow: 0 0 16px 5px rgba(22, 163, 74, 0.5);
+    background: #4472ff;
+    box-shadow: 0 6px 16px rgba(45, 92, 255, 0.55);
+    transform: translateY(-2px);
   }
 
   .divider {
     height: 1px;
     background: linear-gradient(to right, transparent, #333, transparent);
-    margin: 30px 0;
+    margin: 28px 0;
   }
 
   .footer {
     text-align: center;
-    padding: 18px;
+    padding: 16px;
     font-size: 12px;
     color: #888;
     background: #101010;
   }
-
+  .profile-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+    margin: 5px auto 15px;
+    border: 1px solid #001cd0;
+    box-shadow: 0 0 12px rgba(32, 31, 31, 0.3);
+    background: #1a0000;
+  }
   @media (max-width: 480px) {
-    .content {
-      padding: 30px 20px;
-    }
-
-    .btn {
-      width: 100%;
-      padding: 12px 0;
-    }
+    .content { padding: 24px 18px; }
+    .btn { width: 100%; }
   }
 </style>
 </head>
 <body>
+
   <div class="wrapper">
     <div class="header">
       <h1>🔐 New Login Detected</h1>
     </div>
 
     <div class="content">
-      <p>Hello 👋<strong>{{username}}</strong>,</p>
-      <p>We noticed a login to your account from a new device or location:</p>
+      <img src="{{img_url}}" alt="DP" class="">
+      <p>Hello 👋 <strong>{{username}}</strong>,</p>
+      <p>Your account was just accessed from a new device or location.</p>
 
       <div class="info-box">
         <p><strong>Device:</strong> {{device_type}} — {{platform}}</p>
@@ -146,12 +154,13 @@
       <a href="{{activity_url}}" class="btn">Review Login Activity</a>
 
       <div class="divider"></div>
-      <p>If this wasn’t you, please review your account immediately to secure it.</p>
+      <p>If this wasn’t you, please secure your account immediately.</p>
     </div>
 
     <div class="footer">
       © 2025 CodeCove. All rights reserved.
     </div>
   </div>
+
 </body>
 </html>
