--- a/server/nodeServer/EmailTamp/forgot.html
+++ b/server/nodeServer/EmailTamp/forgot.html
@@ -1,142 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Password Reset Verification</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #0f0f11;
-      color: #e8e8e8;
-      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      -webkit-font-smoothing: antialiased;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Password Reset Alert</title>
 
-    .wrapper {
-      max-width: 600px;
-      margin: 25px auto;
-      background: linear-gradient(160deg, #1a1a1c, #171719);
-      border-radius: 14px;
-      overflow: hidden;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.8), 0 0 10px rgba(255, 0, 0, 0.15);
-    }
+<style>
+  body {
+    margin: 0;
+    font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background-color: #0a0a0a;
+    color: #f2f2f2;
+    -webkit-font-smoothing: antialiased;
+    padding: 20px 10px;
+  }
 
-    .header {
-      background: linear-gradient(120deg, #b91c1c, #e11d48, #7f1d1d);
-      color: white;
-      text-align: center;
-      padding: 40px 20px 30px;
-      position: relative;
-    }
+  .wrapper {
+    max-width: 520px;
+    margin: 0 auto;
+    background: linear-gradient(150deg, #1a0000, #0f0000 70%);
+    border-radius: 14px;
+    box-shadow: 0 0 25px rgba(255, 0, 0, 0.25);
+    overflow: hidden;
+    border: 1px solid rgba(255, 0, 0, 0.12);
+  }
 
-    .header h1 {
-      margin: 0;
-      font-size: 22px;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-    }
+  .header {
+    background: linear-gradient(135deg, #d00000, #840000 70%);
+    padding: 28px 15px;
+    text-align: center;
+    color: white;
+    position: relative;
+  }
 
-    .alert-icon {
-      width: 50px;
-      height: 50px;
-      margin: 10px auto 0;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 26px;
-      color: white;
-      box-shadow: 0 0 15px rgba(255, 50, 50, 0.3);
-    }
+  .header::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 3px;
+    width: 70px;
+    background: rgba(255, 255, 255, 0.28);
+    border-radius: 10px;
+  }
 
+  .header h1 {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .content {
+    padding: 26px 22px;
+    text-align: center;
+  }
+
+  .profile-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+    margin: 5px auto 15px;
+    border: 2px solid #d00000;
+    box-shadow: 0 0 12px rgba(255, 0, 0, 0.3);
+    background: #1a0000;
+  }
+
+  .content p {
+    color: #e0e0e0;
+    font-size: 14px;
+    line-height: 1.55;
+    margin: 8px 0;
+  }
+
+  .info-box {
+    background: rgba(255, 0, 0, 0.06);
+    border: 1px solid rgba(255, 0, 0, 0.12);
+    border-radius: 10px;
+    padding: 18px 20px;
+    margin: 20px 0;
+    text-align: left;
+    font-size: 13.5px;
+    color: #ffbdbd;
+    box-shadow: 0 0 12px rgba(200, 0, 0, 0.2);
+  }
+
+  .info-box strong {
+    color: #ff6b6b;
+  }
+
+  .btn {
+    display: inline-block;
+    padding: 13px 30px;
+    margin: 20px 0;
+    background: linear-gradient(135deg, #ff0000, #c40000, #7a0000);
+    color: #ffffff !important;
+    text-decoration: none;
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.4px;
+    box-shadow: 0 6px 15px rgba(255, 0, 0, 0.35);
+    transition: 0.25s ease;
+  }
+
+  .btn:hover {
+    background: linear-gradient(135deg, #ff1a1a, #d20000);
+    box-shadow: 0 8px 20px rgba(255, 0, 0, 0.5);
+    transform: translateY(-3px);
+  }
+
+  .divider {
+    height: 1px;
+    background: linear-gradient(to right, transparent, #660000, transparent);
+    margin: 25px 0;
+  }
+
+  .footer {
+    text-align: center;
+    padding: 15px;
+    font-size: 12px;
+    color: #bbb;
+    background: #0d0d0d;
+    border-top: 1px solid rgba(255, 0, 0, 0.12);
+  }
+
+  @media (max-width: 480px) {
     .content {
-      padding: 35px 25px 40px;
-      text-align: center;
+      padding: 20px 16px;
     }
 
-    .content p {
-      font-size: 15px;
-      color: #c2c2c2;
-      margin: 10px 0;
-      line-height: 1.6;
+    .btn {
+      width: 100%;
+      padding: 12px 0;
     }
+  }
+</style>
 
-    .otp-box {
-      display: inline-block;
-      background: linear-gradient(135deg, #e11d48, #b91c1c);
-      color: white;
-      font-size: 28px;
-      font-weight: 700;
-      letter-spacing: 4px;
-      padding: 16px 36px;
-      margin: 25px 0;
-      border-radius: 10px;
-      box-shadow: 0 0 18px rgba(225, 29, 72, 0.4);
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
-    }
-
-    .note {
-      font-size: 13px;
-      color: #999;
-      margin-top: 10px;
-      font-style: italic;
-    }
-
-    .divider {
-      height: 1px;
-      background: linear-gradient(to right, transparent, #333, transparent);
-      margin: 35px 0;
-    }
-
-    .from {
-      font-size: 13px;
-      color: #9e9e9e;
-      margin-top: 5px;
-      text-align: center;
-    }
-
-    .footer {
-      background: #141414;
-      color: #777;
-      font-size: 12px;
-      text-align: center;
-      padding: 18px;
-    }
-
-    @media (max-width: 480px) {
-      .otp-box {
-        font-size: 22px;
-        padding: 12px 28px;
-      }
-      .content {
-        padding: 25px 15px 30px;
-      }
-    }
-  </style>
 </head>
 <body>
+
   <div class="wrapper">
     <div class="header">
-      <div class="alert-icon">⚠️</div>
-      <h1>Password Reset Attempt</h1>
+      <h1>🔐 Reset Password</h1>
     </div>
 
     <div class="content">
-      <p>If you requested to reset your password, use the OTP below to continue.</p>
-      <p>If this wasn’t you, please <strong>do not share this OTP</strong> and secure your account immediately.</p>
-      <div class="otp-box">{{otp}}</div>
-      <p class="note">This OTP will expire in 5 minutes.</p>
+
+      <!-- IMAGE FIRST -->
+      <img src="{{img_url}}" alt="Profile Image" class="profile-img" />
+
+      <!-- USERNAME NEXT -->
+      <p>Hello 👋 <strong>{{username}}</strong>,</p>
+      <p>We received a request to reset your password.</p>
+
+      <div class="info-box">
+        <p><strong>Device:</strong> {{device_type}} — {{platform}}</p>
+        <p><strong>IP Address:</strong> {{ip}}</p>
+        <p><strong>Location:</strong> {{city}}, {{region}}, {{country}}</p>
+        <p><strong>Attempt Time:</strong> {{attempt_time}}</p>
+      </div>
+
+      <a href="{{security_url}}" class="btn">Change Password</a>
 
       <div class="divider"></div>
-      <p class="from">Team CodeCove</p>
+
+      <p>If this wasn’t you, simply ignore this email.</p>
     </div>
 
     <div class="footer">
       © 2025 CodeCove. All rights reserved.
     </div>
   </div>
+
 </body>
 </html>
