new Table for validation /improve email UI /checkAPI is UX And UI improve

--- a/server/nodeServer/EmailTamp/Login.html
+++ b/server/nodeServer/EmailTamp/Login.html
@@ -140,7 +140,7 @@
     </div>
 
     <div class="content">
-      <img src="{{img_url}}" alt="DP" class="">
+      <img src="{{img_url}}" alt="DP" class="profile-img">
       <p>Hello 👋 <strong>{{username}}</strong>,</p>
       <p>Your account was just accessed from a new device or location.</p>
 
@@ -155,6 +155,7 @@
 
       <div class="divider"></div>
       <p>If this wasn’t you, please secure your account immediately.</p>
+      <p>NOTE: The Review link is only valid for 48Hours</p>
     </div>
 
     <div class="footer">
