Improve some API /Fix little but in activityINFO api /Verification before resetPassword is working fine

--- a/server/nodeServer/EmailTamp/forgot.html
+++ b/server/nodeServer/EmailTamp/forgot.html
@@ -168,6 +168,7 @@
       <div class="divider"></div>
 
       <p>If this wasn’t you, simply ignore this email.</p>
+      <p>NOTE: this token is only Valid for 10 Minutes</p>
     </div>
 
     <div class="footer">
