--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="manifest" href="./manifest.json" />
     <meta name="theme-color" content="#141338" /> -->
+    <meta name="description" content="Sociel Media Platform For developer. Where they can learn, share, Chat and Grow Together">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <!-- Standard favicon -->
