--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
     <meta name="theme-color" content="#141338" /> -->
     <meta name="description" content="Sociel Media Platform For developer. Where they can learn, share, Chat and Grow Together">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Doto:wght,ROND@500,13&display=swap" rel="stylesheet">
     <!-- Standard favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="./icon/favicon.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./Icon/favicon.png">
