Fix all known issue and warning from UI UX

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="Sociel Media Platform For developer. Where they can learn, share, Chat and Grow Together">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Saira:wdth,wght@1,112.5,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira:wdth,wght@112.5,500&display=swap" rel="stylesheet"/>
+
     <!-- Standard favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="./icon/favicon.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./Icon/favicon.png">
