change UI of the email tamplates

--- a/server/nodeServer/EmailTamp/Login.html
+++ b/server/nodeServer/EmailTamp/Login.html
@@ -16,7 +16,7 @@
   }
 
   .wrapper {
-    max-width: 600px;
+    max-width: 580px;
     margin: 0 auto;
     background: #151516; /* CLEAN DARK – no gradient */
     border-radius: 14px;
@@ -26,7 +26,7 @@
   }
 
   .header {
-    background: #1f1f21; /* subtle gray-blue */
+    background: linear-gradient(135deg, #3300ff, #cb00fe); /* subtle gray-blue */
     padding: 32px 20px;
     text-align: center;
     color: #ffffff;
@@ -83,7 +83,8 @@
 
   .btn {
     display: inline-block;
-    padding: 12px 30px;
+    padding: 12px;
+    width: 80% !important;
     margin: 20px 0;
     background: #2d5cff; /* cool blue button */
     color: #ffffff !important;
@@ -159,7 +160,7 @@
     </div>
 
     <div class="footer">
-      © 2025 CodeCove. All rights reserved.
+      © 2026 CodeCove. All rights reserved.
     </div>
   </div>
 
